# pooled-writer

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build_and_test.yml
benches/: pool.rs
src/: bgzf.rs  lib.rs
